src/objects/FSTR__Event_Instance__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__Event_Key__c</fullName>
        <description>Key to identify the specific request sent to the RPA provider</description>
        <externalId>true</externalId>
        <inlineHelpText>Key to identify the specific request sent to the RPA provider</inlineHelpText>
        <label>Event Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Message__c</fullName>
        <description>Messages from RPA provider</description>
        <inlineHelpText>Messages from RPA provider</inlineHelpText>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Instance</label>
        <referenceTo>FSTR__Process_Instance__c</referenceTo>
        <relationshipLabel>Event Instances</relationshipLabel>
        <relationshipName>Event_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Provider_Status__c</fullName>
        <description>Raw status given when polling for updates from the provider</description>
        <label>Provider Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Provider__c</fullName>
        <description>Provider of event data</description>
        <label>Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Status__c</fullName>
        <description>Status of event instance</description>
        <inlineHelpText>Status of event instance</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Type__c</fullName>
        <description>Type of event</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Event Instance</label>
    <nameField>
        <displayFormat>Event-{0000000000}</displayFormat>
        <label>Event Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>